--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,9 @@
 // Variables for foundation
 
+// Fuck semantics
 $twitter-color: #00aced;
+$green: #4CAF50;
+$red: #F44336;
 
 //
 // FOUNDATION SETTINGS
