--- a/src/scss/fontello/fontello.css
+++ b/src/scss/fontello/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?612543');
-  src: url('../font/fontello.eot?612543#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?612543') format('woff'),
-       url('../font/fontello.ttf?612543') format('truetype'),
-       url('../font/fontello.svg?612543#fontello') format('svg');
+  src: url('../font/fontello.eot?23799081');
+  src: url('../font/fontello.eot?23799081#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?23799081') format('woff'),
+       url('../font/fontello.ttf?23799081') format('truetype'),
+       url('../font/fontello.svg?23799081#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?612543#fontello') format('svg');
+    src: url('../font/fontello.svg?23799081#fontello') format('svg');
   }
 }
 */
@@ -50,27 +50,6 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-mail:before { content: '\e800'; } /* '' */
-.icon-twitter:before { content: '\e801'; } /* '' */
-.icon-gplus:before { content: '\e802'; } /* '' */
-.icon-github-text:before { content: '\e803'; } /* '' */
-.icon-youtube:before { content: '\e804'; } /* '' */
-.icon-facebook:before { content: '\e805'; } /* '' */
-.icon-right-open:before { content: '\e806'; } /* '' */
-.icon-left-open:before { content: '\e807'; } /* '' */
-.icon-down-open:before { content: '\e808'; } /* '' */
-.icon-up-open:before { content: '\e809'; } /* '' */
-.icon-desktop:before { content: '\e80a'; } /* '' */
-.icon-calendar:before { content: '\e80b'; } /* '' */
-.icon-location:before { content: '\e80c'; } /* '' */
-.icon-pencil:before { content: '\e80d'; } /* '' */
-.icon-th-large:before { content: '\e80e'; } /* '' */
-.icon-th-list:before { content: '\e80f'; } /* '' */
-.icon-bus:before { content: '\e810'; } /* '' */
-.icon-train:before { content: '\e811'; } /* '' */
-.icon-heart:before { content: '\e812'; } /* '' */
-.icon-heart-empty:before { content: '\e813'; } /* '' */
-.icon-star-empty:before { content: '\e814'; } /* '' */
-.icon-star:before { content: '\e815'; } /* '' */
-.icon-cancel:before { content: '\e816'; } /* '' */
-.icon-heart-broken:before { content: '\e817'; } /* '' */
+.icon-right-open:before { content: '\e800'; } /* '' */
+.icon-ok:before { content: '\e801'; } /* '' */
+.icon-heart-broken:before { content: '\e802'; } /* '' */
