--- a/src/scss/fontello/fontello-codes.scss
+++ b/src/scss/fontello/fontello-codes.scss
@@ -1,4 +1,8 @@
 
-.icon-right-open:before { content: '\e800'; } /* '' */
-.icon-ok:before { content: '\e801'; } /* '' */
-.icon-heart-broken:before { content: '\e802'; } /* '' */
+.icon-search:before { content: '\e800'; } /* '' */
+.icon-fire-station:before { content: '\e801'; } /* '' */
+.icon-heart:before { content: '\e802'; } /* '' */
+.icon-frown:before { content: '\e803'; } /* '' */
+.icon-download:before { content: '\e804'; } /* '' */
+.icon-ok:before { content: '\e805'; } /* '' */
+.icon-twitter:before { content: '\e806'; } /* '' */
