--- a/src/scss/fontello/fontello.css
+++ b/src/scss/fontello/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?23799081');
-  src: url('../font/fontello.eot?23799081#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?23799081') format('woff'),
-       url('../font/fontello.ttf?23799081') format('truetype'),
-       url('../font/fontello.svg?23799081#fontello') format('svg');
+  src: url('../font/fontello.eot?68852252');
+  src: url('../font/fontello.eot?68852252#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?68852252') format('woff'),
+       url('../font/fontello.ttf?68852252') format('truetype'),
+       url('../font/fontello.svg?68852252#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?23799081#fontello') format('svg');
+    src: url('../font/fontello.svg?68852252#fontello') format('svg');
   }
 }
 */
@@ -50,6 +50,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-right-open:before { content: '\e800'; } /* '' */
-.icon-ok:before { content: '\e801'; } /* '' */
-.icon-heart-broken:before { content: '\e802'; } /* '' */
+.icon-search:before { content: '\e800'; } /* '' */
+.icon-fire-station:before { content: '\e801'; } /* '' */
+.icon-heart:before { content: '\e802'; } /* '' */
+.icon-frown:before { content: '\e803'; } /* '' */
+.icon-download:before { content: '\e804'; } /* '' */
+.icon-ok:before { content: '\e805'; } /* '' */
+.icon-twitter:before { content: '\e806'; } /* '' */
